--- a/zombieTales/templates/main/index.html.twig
+++ b/zombieTales/templates/main/index.html.twig
@@ -1,20 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello MainController!{% endblock %}
+{% block stylesheets %}
+<link rel="stylesheet" href="{{ asset('CSS/home.css') }}">
+{% endblock %}
 
+{% block versionList %}
+{% for version in version_list %}
+<li><a href="javascript:void(0)" class="headerVersion headerLink headerNav">{{ version.name }}</a></li>
+{% endfor %}
+{% endblock %}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/Projet_Perso/zombieTales/zombieTales/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/Projet_Perso/zombieTales/zombieTales/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
+<div class="homeContainer">
+    {% for scenar in scenar_list %}
+    <article class="card">
+        <div class="cardUp">
+            <h3 class="cardTiltleUp"><a class="cardUpLink" href="{{ path('scenar_read', {id : scenar.id}) }}">{{ scenar.title }}</a></h3>
+            <div class="cardInfo">
+                <span class="cardInfoAuth">by {{ scenar.author.name }}</span>
+                <span class="cardInfoQuest">{{ scenar.difficulty.level }} / {{ scenar.survivors }}+SURVIVORS / {{ scenar.time }}+MINUTES</span>
+            </div>
+        </div>
+        <div class="cardDown">
+            <h3 class="cardTiltleDown"><a class="cardLink" href="{{ path('scenar_read', {id : scenar.id}) }}">{{ scenar.title }}</a></h3>
+            <span class="cardDate"><time datetime="{{ scenar.createAt|date('M d, Y') }}">{{ scenar.createAt|date('M d, Y') }}</time></span>
+            <p class="cardExcerpt">{{ scenar.history }}</p>
+        </div>
+    </article>
+    {% endfor %}
 </div>
 {% endblock %}
