--- a/zombieTales/templates/main/read.html.twig
+++ b/zombieTales/templates/main/read.html.twig
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="scenarRight">
-                <img class="scenarImg" src="{{ asset('IMG/' ~ scenar.map) }}" alt="{{scenar.map}}">
+                <img class="scenarImg" src="{{ asset('images/map/' ~ scenar.map) }}" alt="{{scenar.map}}">
             </div>
         </section>
         <section class="commentSection">
