intégration formulaire front

--- a/zombieTales/templates/base.html.twig
+++ b/zombieTales/templates/base.html.twig
@@ -18,7 +18,7 @@
                 <ul class="headerUl">
                     <li><a class="headerLink headerNav" href="#">Connection</a></li>
                     <li><a class="headerLink headerNav" href="{{ path('homepage') }}">Accueil</a></li>
-                    <li><a class="headerLink headerNav" href="#">Création</a></li>
+                    <li><a class="headerLink headerNav" href="{{ path('scenario_add') }}">Création</a></li>
                     <li><a class="headerLink headerNav buttonBurger" href="javascript:void(0)">Version</a></li>
                     <ul class="burgerMenu burgerHidden">
                         {% block versionList %}{% endblock %}
