--- a/ZombieTales/templates/main/homepage.html.twig
+++ b/ZombieTales/templates/main/homepage.html.twig
@@ -9,16 +9,16 @@
             {% for scenar in scenar_list %}
             <article class="card">
                 <div class="cardUp">
-                    <h3 class="cardTiltleUp"><a class="cardUpLink" href="article.html">{{ scenar.title }}</a></h3>
+                    <h3 class="cardTiltleUp"><a class="cardUpLink" href="{{ path('scenario_read', {id: scenar.id}) }}">{{ scenar.title }}</a></h3>
                     <div class="cardInfo">
-                        <span class="cardInfoAuth">by pedro le plot</span>
-                        <span class="cardInfoQuest">HARD / 4+SURVIVORS / 90+MINUTES</span>
+                        <span class="cardInfoAuth">by {{ scenar.user.pseudo }}</span>
+                        <span class="cardInfoQuest"> {{ scenar.difficultyId.level }} / {{ scenar.nbSurvivor }}+SURVIVORS / {{ scenar.time }}+MINUTES</span>
                     </div>
                 </div>
                 <div class="cardDown">
-                    <h3 class="cardTiltleDown"><a class="cardLink" href="article.html">WM7 - CHASING NIGHTMARES</a></h3>
+                    <h3 class="cardTiltleDown"><a class="cardLink" href="{{ path('scenario_read', {id: scenar.id}) }}">{{ scenar.title }}</a></h3>
                     <span class="cardDate"><time datetime="26/10/2021">Oct 22 , 2021</time></span>
-                    <p class="cardExcerpt">As brave and bold as they are, the kids confessed that they still have nightmares about the zombies, especially Abominations.
+                    <p class="cardExcerpt">{{ scenar.history }}
                     </p>
                 </div>
             </article>
