--- a/ZombieTales/templates/main/read.html.twig
+++ b/ZombieTales/templates/main/read.html.twig
@@ -5,4 +5,97 @@
     <link rel="stylesheet" href="{{asset('CSS/scenar.css')}}">
 {% endblock %}
 {% block body %}
+ <div class="trans">
+            <img src="../IMG/BGScenario.png" alt="image de fond sigle biozard">
+        </div>
+        <section class="scenarSection">
+            <div class="scenarLeft">
+                <div class="scenarTiltles">
+                    <h3 class="scenarTiltle">{{ scenar.title }} </h3>
+                    <p class="scenarAuth">posté par : <span class="auth">{{ scenar.user.pseudo }}</span></p>
+                    <p class="scenarLvl">{{ scenar.difficultyId.level }} / {{ scenar.nbSurvivor }}+SURVIVORS / {{ scenar.time }}+MINUTES</p>
+                </div>
+                <div class="scenarTales">
+                    <p class="tales">{{ scenar.history }}</p>
+                </div>
+                <div class="scenarMaterials">
+                    <p class="scenarMaterial">Material needed : <span class="scenarVersion">Zombicide : 2nd Edition.</span></p>
+                    <p class="scenarMaterial">Tiles needed : <span class="scenarTiles"> 1V, 2V, 5R, 7V, 8R, & 9R.</span></p>
+                </div>
+                <div class="scenarObjectives">
+                    <h4 class="objectivesTiltle">OBJECTIVES</h4>
+                    {# TODO section OBJECTIFS + SPECIAL RULES #}
+                    <p><span class="em">Kill your fear. </span>Accomplish these Objectives in any order to win the game</p>
+                    <ul class="objectivesUl">
+                        <li class="objectivesLi">Each Survivor has an Objective token (see Special Rules).</li>
+                        <li class="objectivesLi">Eliminate at least 4 Abominations with different names</li>
+                    </ul>
+                    <span class="objectiveSpe">This Mission uses the Abomination Fest rules (rulebook,
+                        P. 30).</span>
+                </div>
+                <div class="scenarRules">
+                    <h4 class="rulesTiltle">SPECIAL RULES</h4>
+                    <ul class="RulesUl">
+                        <li class="RulesLi">Setup. Place the Blue and the Green Objectives randomly among the Objectives, facedown.</li>
+                        <li class="RulesLi">Mark of the Tiger. Each Objective gives 5 Adrenaline Points to the Survivor who takes it.</li>
+                            <ul class="RuleSubUl">
+                                <li class="RuleSubLi">- Place the Objective token on the Survivor’s Dashboard. Itdoesn’t take up an inventory slot. A Survivor gains the Roll 6: +1 Damage Skill as long as they have 1 or more Objective tokens. Only Tiger Sam can trade Objective tokens in the same way as Equipment cards.</li>
+                                <li class="RuleSubLi">- Taking a Red Objective also spawns an Abomination on the nearest active Spawn Zone (if several are eligible, players choose)</li>
+                                <li class="RuleSubLi">- Taking the Blue or the Green Objective also activates the Spawn Zone of the corresponding color. Then, remove an active Spawn Zone token of the player’s choice (except the Starting Spawn Zone token).</li>
+                            </ul>
+                        <li class="RulesLi">Unique like me. Each Pimpweapon Crate gives a random Pimpweapon, among those still available, to the Survivor who takes it. They can then reorganize their inventory for free.</li>
+                        <li class="RulesLi"> A monster under the hood. The Police Car can be driven. When searching it, draw cards until a weapon card is drawn. Discard the other cards. The Aaahh!! card triggers the appearance of a Walker as usual and interrupts the Search.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="scenarRight">
+                {# TODO gérer l'ajout des images (ajout du champ map dans la table scenario) #}
+                <img class="scenarImg" src="../IMG/map_2.jpeg" alt="map de la partie">
+            </div>
+        </section>
+        <section class="commentSection">
+            <div class="commentList">
+            {# TODO ajout commentaire dans la BDD + Dynamisation #}
+                <div class="comment">
+                    <p class="commentInfo">Posté par XXX le <time datetime="22/10/2021">22/10/2021</time> dans <a
+                            href="#">black plague</a></p>
+                    <p class="commentContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus esse
+                        deserunt.</p>
+                </div>
+                <div class="comment">
+                    <p class="commentInfo">Posté par XXX le <time datetime="22/10/2021">22/10/2021</time> dans <a
+                            href="#">black plague</a></p>
+                    <p class="commentContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus esse
+                        deserunt.</p>
+                </div>
+                <div class="comment">
+                    <p class="commentInfo">Posté par XXX le <time datetime="22/10/2021">22/10/2021</time> dans <a
+                            href="#">black plague</a></p>
+                    <p class="commentContent">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus esse
+                        deserunt.</p>
+                </div>
+            </div>
+                <form action="" method="post" class="commentForm">
+                    <textarea class="textForm" name="commentFormText" id="" cols="30" rows="10" placeholder="enter your comment here"></textarea>
+                    <button type="submit">Comment</button>
+                </form>
+        </section>
+    </main>
+    <footer>
+        <ul class="form">
+            <li class="footerNav"><a class="formLink" href="javascript:void(0)">Connexion</a></li>
+            <li class="footerNav"><a class="formLink" href="javascript:void(0)">Inscription</a></li>
+            <li class="footerNav"><a class="formLink" href="javascript:void(0)">réglement du site</a></li>
+        </ul>
+        <div class="footerResaux">
+            <h3 class="footerResauxTiltle">Follow us</h3>
+            <ul class="reseaux">
+                <li class="footerNav"><a class="reseauxLink" href="javascript:void(0)"><i
+                            class="facebookLink fab fa-facebook-square"></i></a></li>
+                <li class="footerNav"><a class="reseauxLink" href="javascript:void(0)"><i
+                            class="instagramLink fa fa-instagram"></i></a></li>
+                <li class="footerNav"><a class="reseauxLink" href="javascript:void(0)"><i
+                            class="mailLink fas fa-paper-plane"></i></a></li>
+            </ul>
+        </div>
 {% endblock %}
